# flink-datastream

./: .gitignore  README.md  pom.xml
flink-datastream-demo/: README.md  dependency-reduced-pom.xml  pom.xml
flink-datastream-demo/src/main/java/com/github/abyssnlp/: Main.java
flink-datastream-demo/src/main/java/com/github/abyssnlp/functions/: AveragePerMonthProcessFunction.java  StockPriceMapper.java  TotalAverageMonthProcessFunction.java
flink-datastream-demo/src/main/java/com/github/abyssnlp/models/: StockPrice.java
flink-datastream-enrichment/: Dockerfile  Makefile  README.md  dependency-reduced-pom.xml  pom.xml
flink-datastream-enrichment/k8s/: deploy.yml  enriched-topic.yml  lookup-table-job.yml  producer-job.yml  secrets.yml  topic.yml
flink-datastream-enrichment/scripts/lookup/: Dockerfile  datagen.py
flink-datastream-enrichment/scripts/producer/: Dockerfile  producer.py
flink-datastream-enrichment/src/main/java/com/github/abyssnlp/: Main.java
real-time-f1/: .gitignore  Makefile  README.md  docker-compose.yml  pom.xml
real-time-f1/clickhouse/config/: config.xml  users.xml
real-time-f1/grafana/dashboards/: f1-race-analysis.json
real-time-f1/grafana/datasources/: datasources.yaml
real-time-f1/grafana/provisioning/dashboards/: dashboards.yaml
real-time-f1/grafana/provisioning/datasources/: datasources.yaml
real-time-f1/producer/: .gitignore  README.md  main.py  pyproject.toml
real-time-f1/producer/producer/: ch_tables.py  main.py  reseeker.py
real-time-f1/src/main/java/com/github/abyssnlp/: AppConfig.java  Main.java
(+12 files in other folders)
