[project]
name = "producer"
version = "0.1.0"
description = "Produces F1 telemetry data to a Kafka topic."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "confluent-kafka>=2.14.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["producer"]

[project.scripts]
producer = "producer.main:main"
reseeker = "producer.reseeker:main"
ch_tables = "producer.ch_tables:main"
